feat(acknowledgements): 添加国际化支持并更新页面布局
- 添加了对英文和中文的语言支持
- 更新了页面布局，增加了 logo 列表和链接
- 优化了样式，使内容居中显示
- 添加了对 Gudupao 的特别鸣谢

--- a/locales/en.json
+++ b/locales/en.json
@@ -79,5 +79,10 @@
   },
   "vercard": {
     "title": "Version Card"
+  },
+  "acknowledgements": {
+    "special_thanks_title": "Special Thanks",
+    "thanks_contributors": "Thanks to all contributors",
+    "view_all_on_github": "View all contributors on <a href=\"https://github.com/Class-Widgets/Class-Widgets/graphs/contributors\" target=\"_blank\">GitHub</a>"
   }
 }
