style(locales): 为 JSON 文件中的链接添加样式
- 在英文和中文的 JSON 文件中，为 Github 和 Community 链接添加了蓝色样式
- 通过在链接标签内添加 style="color: #007bff;" 来实现颜色变化

--- a/locales/en.json
+++ b/locales/en.json
@@ -68,7 +68,7 @@
       "description": "Currently only supports Debian, please stay tuned for other versions."
     },
     "footer": {
-      "help": "Need help? Go to our <a href=\"https://github.com/Class-Widgets/Class-Widgets\">Github</a> or join the <a href=\"https://github.com/orgs/Class-Widgets/discussions\">Community</a>",
+      "help": "Need help? Go to our <a href=\"https://github.com/Class-Widgets/Class-Widgets\" style=\"color: #007bff;\">Github</a> or join the <a href=\"https://github.com/orgs/Class-Widgets/discussions\" style=\"color: #007bff;\">Community</a>",
       "security": "All downloads are digitally signed and security verified"
     }
   },
@@ -83,6 +83,6 @@
   "acknowledgements": {
     "special_thanks_title": "Special Thanks",
     "thanks_contributors": "Thanks to all contributors",
-    "view_all_on_github": "View all contributors on <a href=\"https://github.com/Class-Widgets/Class-Widgets/graphs/contributors\" target=\"_blank\">GitHub</a>"
+    "view_all_on_github": "View all contributors on <a href=\"https://github.com/Class-Widgets/Class-Widgets/graphs/contributors\" target=\"_blank\" style=\"color: #007bff;\">GitHub</a>"
   }
 }
