--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "test": "Test",
   "hero": {
-    "title": "Experience a Redefined Classroom Desktop\nWhich Powered by Versatile Schedules",
+    "title": "Experience a redefined classroom desktop\npowered by versatile schedule widgets",
     "download": "Download",
     "docs": "Docs",
     "community": "Community"
