--- a/locales/en.json
+++ b/locales/en.json
@@ -51,7 +51,7 @@
   "download": {
     "page_title": "Download",
     "title": "Download Class Widgets",
-    "description": "Download the Class Widgets application to use on your device. We provide versions for Windows, macOS, and Linux to ensure you can enjoy our software on any platform.\nOr if you want to use or experience the new features, please download Class Widgets from the <a href=\"https://github.com/Class-Widgets/Class-Widgets/actions\" style=\"color: #007bff;\">Actions</a> page of its GitHub repository.\nYou will get a zip file, please extract it to a suitable location and run 'ClassWidgets.exe'. You can access settings or exit the program via the tray menu.",
+    "description": "Download the Class Widgets application to use on your device. We provide versions for Windows, macOS, and Linux to ensure you can enjoy our software on any platform.<br><br>Or if you want to use or experience the new features, please download Class Widgets from the <a href=\"https://github.com/Class-Widgets/Class-Widgets/actions\" style=\"color: #007bff;\">Actions</a> page of its GitHub repository.<br><br>You will get a zip file, please extract it to a suitable location and run 'ClassWidgets.exe'. You can access settings or exit the program via the tray menu.",
     "use_proxy": "Use proxy to download (please check this option if the direct download speed is slow)",
     "loading": "Loading latest version information...",
     "download_button": "Download",
